changed header to cutz for kidz

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <div class="header-content">
                         <div class="header-content-inner">
                             <h1>Cutz for Kidz: Your Local Barbershop. We provide the best quality haircuts at the best prices in the District of Columbia.</h1>
-                            <a href="#download" class="btn btn-outline btn-xl page-scroll">Book an appointment now </a>
+                            <a href="#download" class="btn btn-outline btn-xl page-scroll">Book an appointment now!</a>
                         </div>
                     </div>
                 </div>
